<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
         android:src="@drawable/background"
         android:contentDescription="@string/bck" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
	 	<LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="30dp"
        	android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
        	android:orientation="vertical">
	 		<TextView
	 		    android:id="@id/scoring_text"
	 		    android:layout_width="match_parent"
	 		    android:layout_height="wrap_content"
	 		    android:gravity="center"
	 		    android:text="@string/scoring_string"
	 		    android:textColor="@android:color/black"
	 		    android:textSize="22sp" />
		</LinearLayout>
		<LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical">
	 		<LinearLayout
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:orientation="horizontal">
	        	<TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:padding="10dp"
			        android:text="@string/age_string" />
		 		<SeekBar
		        android:id="@id/age_seek"
		        android:layout_width="150dp"
		        android:layout_height="wrap_content"
		        android:max="75"
		        android:progress="25"/>
			    <TextView
			        android:id="@id/age_seek_text"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:padding="10dp"
			        android:text="@string/age_string" />
		    </LinearLayout>
		    <LinearLayout
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:orientation="horizontal">
	        	<TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:padding="10dp"
			        android:text="@string/assets_string" />
		 		<SeekBar
		        android:id="@id/assets_seek"
		        android:layout_width="150dp"
		        android:layout_height="wrap_content"
		        android:max="10000"
		        android:progress="500"/>
			    <TextView
			        android:id="@id/assets_seek_text"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:padding="10dp"
			        android:text="@string/assets_string" />
		    </LinearLayout>
		    <LinearLayout
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:orientation="horizontal">
	        	<TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:padding="10dp"
			        android:text="@string/cases_string" />
		 		<SeekBar
		        android:id="@id/cases_seek"
		        android:layout_width="150dp"
		        android:layout_height="wrap_content"
		        android:max="15"
		        android:progress="0"/>
			    <TextView
			        android:id="@id/cases_seek_text"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:padding="10dp"
			        android:text="@string/cases_string" />
		    </LinearLayout>
		    <LinearLayout
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:orientation="horizontal">
	        	<TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:padding="10dp"
			        android:text="@string/edu_string" />
		 		<SeekBar
		        android:id="@id/edu_seek"
		        android:layout_width="150dp"
		        android:layout_height="wrap_content"
		        android:max="25"
		        android:progress="12"/>
			    <TextView
			        android:id="@id/edu_seek_text"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:padding="10dp"
			        android:text="@string/edu_string" />
		    </LinearLayout>
		    <LinearLayout
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:orientation="horizontal">
			    <LinearLayout
		        	android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:orientation="horizontal">
		        	<TextView
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:padding="5dp"
				        android:text="@string/inc_string" />
		        	<CheckBox
		                android:id="@id/check_inc"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:checked="true" />
				</LinearLayout>
			    <LinearLayout
		        	android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:orientation="horizontal">
		        	<TextView
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:padding="5dp"
				        android:text="@string/bjp_string" />
		        	<CheckBox
		                android:id="@id/check_bjp"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:checked="true" />
				</LinearLayout>
				<LinearLayout
		        	android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:orientation="horizontal">
		        	<TextView
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:padding="5dp"
				        android:text="@string/aap_string" />
		        	<CheckBox
		                android:id="@id/check_aap"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:checked="true" />
				</LinearLayout>
				<LinearLayout
		        	android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:orientation="horizontal">
		        	<TextView
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:padding="5dp"
				        android:text="@string/ind_string" />
		        	<CheckBox
		                android:id="@id/check_ind"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content" />
				</LinearLayout>
			    
	        	
		    </LinearLayout>
		    <ImageView
	         android:layout_width="25dp"
	         android:layout_height="25dp"
	         android:scaleType="centerCrop"
	         android:id="@id/scoring_submit"
	         android:layout_gravity="center"
	         android:src="@drawable/tick"
	         android:contentDescription="@string/bck" />
	 	</LinearLayout>
	
      </LinearLayout>



</RelativeLayout>