<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
         android:src="@drawable/background"
         android:contentDescription="@string/bck" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
	 	<LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="30dp"
        	android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
        	android:orientation="vertical">
	 		<TextView
	 		    android:id="@id/main_screen_text"
	 		    android:layout_width="match_parent"
	 		    android:layout_height="wrap_content"
	 		    android:gravity="center"
	 		    android:text="@string/main_string"
	 		    android:textColor="@android:color/black"
	 		    android:textSize="22sp" />
		</LinearLayout>
		<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:stretchColumns="1"
		    android:id="@id/desc_table">
		</TableLayout>
		<LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="30dp"
        	android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
        	android:orientation="vertical">
	 		<TextView
	 		    android:id="@id/score_text"
	 		    android:layout_width="match_parent"
	 		    android:layout_height="wrap_content"
	 		    android:gravity="center"
	 		    android:text="@string/score_string"
	 		    android:textColor="@android:color/black"
	 		    android:textSize="22sp" />
		</LinearLayout>
      </LinearLayout>



</RelativeLayout>